feat: add image and favicon folder, add favicon, looo B&B and game logo

--- a/index.html
+++ b/index.html
@@ -5,35 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemoVocabs</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/6ad4166ad8.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header id="home">
-        <div class="burger-menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+
+    <!-- Header with logo -->
+    <header>
+        <a href="index.html">
+            <div id="logo">
+                <img src="assets/images/logoWhite.webp" alt="Logo"
+                    aria-label="image of logo with name of the Bed and Breakfast">
+            </div>
+        </a>        
     </header>
 
+    <!-- Hero Section -->
     <div class="hero">
-        <h1>Welcome to MemoVocabs!</h1>
-        <img src="hero-image.jpg" alt="Hero Image" class="hero-image">
+        <img src="assets/images/hero-image.webp" alt="Hero Image" class="hero-image">
     </div>
 
     <main></main>
 
     <footer>
-        <p>&copy; MemoVocabs - Anne's Language Retreat</p>
+        <p>Copyright &copy; MemoVocabs</p>
     </footer>
 
     <script src="assets/script.js" defer></script>
