--- a/index.html
+++ b/index.html
@@ -35,9 +35,53 @@
 
     <main></main>
 
+    <!-- Footer -->
     <footer>
-        <p>Copyright &copy; MemoVocabs</p>
+        <section class="memo-container">
+            <h3>Copyright &copy; MemoVocabs</h3>
+            <ul id="social-media">
+                <li>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (link opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (link opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page (link opens in a new tab)"><i
+                            class="fa-brands fa-square-youtube"></i></a>
+                </li>
+            </ul>
+        </section>
+        <section class="contact-container">
+            <div>
+                <h3>Contact</h3>
+                <p>Ballybrack, Waterville
+                    <br>
+                    Co. Kerry, Ireland</p>
+                <div>
+                <div>
+                    <span>Phone: </span>
+                        span>+353 89 4044720</span>
+                </div>
+                <div class="contact-ft">
+                    <a href="mailto:info@anneslanguageretreat.com">info@anneslanguageretreat.com</a>
+                </div>
+                <div>
+                    <span>Your host: Annika Merz</span>
+                </div>
+            </div>
+        </section>
     </footer>
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/6ad4166ad8.js" crossorigin="anonymous"></script>
+    <script src="assets/script.js" defer></script>
+</body>
+
 
     <script src="assets/script.js" defer></script>
 </body>
