feat style: add aria-label in relevant sections, add styles for buttons and gameBoard

--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
         <a href="index.html">
             <div id="logo">
                 <img src="assets/images/logoWhite.webp" alt="Logo"
-                    aria-label="image of logo with name of the Bed and Breakfast">
+                    aria-label="image of logo with name of the language school">
             </div>
         </a>        
     </header>
 
     <!-- Hero Section -->
     <div class="hero">
-        <img src="assets/images/hero-image.webp" alt="Hero Image" class="hero-image">
+        <img src="assets/images/hero-image.webp" alt="Hero Image" class="hero-image" aria-label="game logo with game name 'MemoVocabs'">
     </div>
 
     <!-- Main Section -->
     <main>
-        <section id="game">
+        <section id="game" aria-label="user input section">
             <form id="game-setup">
-                <label for="name">What is your name?</label>
+                <label for="name" aria-label="enter your name required field">What is your name?</label>
                 <input type="text" id="name" name="name" placeholder=" Name" required>
                 <label for="cards-number">Choose the number of cards:</label>
-                <select id="cards-number" name="cards-number">
+                <select id="cards-number" name="cards-number" aria-label="select the number of cards: 12, 16 or 24 required field">
                     <option value="">--</option>
                     <option value="12">12</option>
                     <option value="16">16</option>
                     <option value="24">24</option>
                 </select>
                 <label for="card-color">Choose back card color:</label>
-                <select id="card-color" name="card-color">
+                <select id="card-color" name="card-color" aria-label="select a color for the back of card required field">
                     <option value="">--</option>
                     <option value="red">Red</option>
                     <option value="yellow">Yellow</option>
@@ -55,16 +55,16 @@
                     <option value="olive-green">Olive Green</option>
                     <option value="purple">Purple</option>
                 </select>
-                <button type="submit">Start Game</button>
+                <button type="submit" aria-label="button to start game">Start Game</button>
             </form>
             <div id="gameBoard" class="board"></div>
-            <button id="reset-button">Reset Game</button>
+            <button id="reset-button" aria-label="button to reset game">Reset Game</button>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <section class="memo-container">
+        <section class="memo-container" aria-label="section with links to social media">
             <h3>Copyright &copy; MemoVocabs</h3>
             <ul id="social-media">
                 <li>
@@ -84,7 +84,7 @@
                 </li>
             </ul>
         </section>
-        <section class="contact-container">
+        <section class="contact-container" aria-label="section with contact details of language school">
             <div>
                 <h3>Contact</h3>
                 <p>Ballybrack, Waterville
