style: add media queries for landscape mobile phone, tablet, laptop and larger

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Footer -->
     <footer>
         <section class="memo-container" aria-label="section with links to social media">
-            <h3>Copyright &copy; MemoVocabs</h3>
+            <h3>Copyright<br>&copy; MemoVocabs</h3>
             <ul id="social-media">
                 <li>
                     <a href="https://www.instagram.com" target="_blank" rel="noopener"
