fix: troubleshoot gameBoard not created upon clicking start button, final message showing randomly after flipping cards after resetting game

--- a/index.html
+++ b/index.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemoVocabs</title>
-
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
-
-    <!-- Font Awesome Kit -->
-    <script src="https://kit.fontawesome.com/6ad4166ad8.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MemoVocabs</title>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-
-    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -122,25 +104,25 @@
             <div>
                 <h3>Contact</h3>
                 <p>Ballybrack, Waterville
-                <br>
+                    <br>
                     Co. Kerry, Ireland</p>
                 <div>
-                <div>
-                    <span>Phone: </span>
-                    <span>+353 89 4044720</span>
+                    <div>
+                        <span>Phone: </span>
+                        <span>+353 89 4044720</span>
+                    </div>
+                    <div class="contact-ft">
+                        <a href="mailto:info@anneslanguageretreat.com">info@anneslanguageretreat.com</a>
+                    </div>
+                    <div>
+                        <span>Your host: Annika Merz</span>
+                    </div>
                 </div>
-                <div class="contact-ft">
-                    <a href="mailto:info@anneslanguageretreat.com">info@anneslanguageretreat.com</a>
-                /div>
-                <div>
-                    <span>Your host: Annika Merz</span>
-                </div>
-            </div>
         </section>
     </footer>
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/6ad4166ad8.js" crossorigin="anonymous"></script>
-    <script src="assets/script.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
 </body>
 
 </html>
