--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     </footer>
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/6ad4166ad8.js" crossorigin="anonymous"></script>
+    <!-- Javascript -->
     <script src="assets/js/script.js" defer></script>
 </body>
 
