--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <!-- Volume control button -->
     <div id="volume-control">
         <p>Music On/Off
-        <i id="volume-icon" class="fa-regular fa-volume-xmark"></i>
-        </p>
+            <i id="volume-icon" class="fa-solid fa-volume-xmark"></i>
+            </p>    
     </div>
 
     <!-- Main Section -->
