maint: changed text for name object in baseCards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Volume control button -->
-    <div id="volume-control">
+    <div id="volume-control" style="padding-left: 30px;">
         <p>Music On/Off
             <i id="volume-icon" class="fa-solid fa-volume-xmark"></i>
         </p>
