fix: bug-fix after regression test -> add styles to ensure content stays within margins of cards, fixed font to smallin pop-up window for number of cards and color of back card, add label for Enter vocabulary, delete phone nmber from footer and add website

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <form id="game-setup">
                 <label for="name" aria-label="enter your name required field">What is your name?</label>
                 <input type="text" id="name" name="name" placeholder=" Name" required>
+                <label for="enter-vocabulary" aria-label="section for entering vocabulary">Customise your game (optional)</label>
               <button type="submit" id="enter-vocabulary" aria-label="button to enter vocabulary">Enter Vocabulary</button>
                 <label for="cards-number" aria-label="select your number of cards: 12, 16, 24 required field">Choose the number of
                     cards:</label>
