feat: complete README.md

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section id="game" aria-label="user input section">
             <form id="game-setup">
                 <label for="name" aria-label="enter your name required field">What is your name?</label>
-                <input type="text" id="name" name="name" placeholder=" Name" required>
+                <input type="text" id="name" name="name" placeholder=" Enter your name" required>
                 <label for="enter-vocabulary" aria-label="section for entering vocabulary">Customise your game (optional)</label>
               <button type="submit" id="enter-vocabulary" aria-label="button to enter vocabulary">Enter Vocabulary</button>
                 <label for="cards-number" aria-label="select your number of cards: 12, 16, 24 required field">Choose the number of
@@ -117,16 +117,16 @@
                 <p>Ballybrack, Waterville
                     <br>
                     Co. Kerry, Ireland</p>
-                <div>
-                    <span>Phone: </span>
-                    <span>+353 89 4044720</span>
-                </div>
-                <div class="contact-ft">
-                    <a href="mailto:info@anneslanguageretreat.com">info@anneslanguageretreat.com</a>
-                </div>
-                <div>
-                    <span>Your host: Annika Merz</span>
-                </div>
+            <div class="contact-ft">
+                    <a href="https://merzann.github.io/Project-Anne-s-Language-Retreat/" target="_blank" rel="noopener"
+                    aria-label="Website of Anne's Language Retreat(link opens in a new tab)">www.anneslanguageretreat.com</a>
+            </div>
+            <div class="contact-ft">
+                <a href="mailto:info@anneslanguageretreat.com">info@anneslanguageretreat.com</a>
+            </div>
+            <div>
+                <span>Your host: Annika Merz</span>
+            </div>
             </div>
         </section>
     </footer>
